# validators

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  task.md  tsconfig.json
patterns/: bech32-address.json  coordinates.json  (+12 more)
regex-python/: LICENSE  README.md  pyproject.toml  tests.py
regex-python/.github/workflows/: release.yml
regex-python/patterns/: date-eu.json  datetime-iso.json  ethereum-address.json  pl-nip.json  port-number.json
regex-python/src/regexto_validators/: __init__.py
regex-python/src/regexto_validators/patterns/: au-abn.json  base64.json  bitcoin-address.json  br-cnpj.json  br-cpf.json  credit-card.json  crypto-mnemonic-word.json  de-steuerid.json  domain.json  email.json  ens-name.json  es-nif.json  fr-siren.json  hashtag.json  iban.json  ipfs-cid.json  ipv4.json  ipv6.json  iso-date.json  latitude.json  lightning-invoice.json  mac-address.json  markdown-bold.json  markdown-italic.json  markdown-link.json  markdown-list-item.json  markdown-table-row.json  md5.json  mention.json  mongodb-uri.json  password-strong.json  phone-e164.json  semver.json  sha256.json  slug.json  swift-bic.json  time-24h.json  uk-nino.json  uk-postcode.json  us-ein.json  (+3 more)
regex-python/src/regexto_validators/patterns/patterns/: fr-siret.json  git-sha.json  hex-color.json  markdown-hr.json  ru-inn.json  solana-address.json  username.json
regex-rust/: Cargo.toml  LICENSE  README.md
regex-rust/.github/workflows/: release.yml
regex-rust/patterns/: date-us.json  fr-postal.json  html-tag.json  jwt.json
regex-rust/src/: lib.rs
(+30 files in other folders)
